@@ -2,6 +2,7 @@
 
 	* library.c: Added Olympus IR-300
 	* library.c: Do not allow "mkdir" of the same directory twice.
+	* library.c: Do not allow "put" of the same file twice.
 
 2006-09-18  Marcus Meissner  <marcus@jet.franken.de>
 
